# OpenSource-Pilot

./: .dockerignore  .env.example  .gitignore  DEMO.md  DEPLOYMENT.md  README.md  openpilot.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: base.py  code_analysis_agent.py  contribution_workflow_agent.py  issue_agent.py  planning_agent.py  pr_agent.py  radar_agent.py  repo_agent.py  test_generation_agent.py
app/api/: deps.py  router.py
app/core/: exceptions.py  logging.py  middleware.py
app/llm/: anthropic_client.py  base.py  factory.py  openai_client.py  openrouter_client.py
app/models/: __init__.py  issue.py  repo.py
app/services/: contribution_workflow_service.py  issue_service.py  radar_service.py  repo_service.py  search_service.py
app/tools/: __init__.py  chroma_tool.py  code_chunker.py  git_tool.py  github_api_tool.py  structure_parser.py
frontend/: README.md  VERCEL.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalyzeTab.tsx  DiscoverTab.tsx  PipelinePanel.tsx  (+5 more)
tests/: conftest.py
tests/integration/: test_complete_workflow_endpoint.py  test_health_endpoint.py  test_issue_handling.py  test_radar_endpoints.py  test_repo_analysis.py  test_search_endpoint.py
tests/unit/: __init__.py  test_code_chunker.py  test_contribution_workflow_agent.py  test_contribution_workflow_service.py  test_github_api_tool.py  test_issue_classifier.py  test_planning_agent.py  test_pr_agent.py  test_radar_agent.py  test_search_service.py  test_structure_parser.py  test_test_generation_agent.py
(+8 files in other folders)
